--- a/archives/toutiao-search/2024-04-12.md
+++ b/archives/toutiao-search/2024-04-12.md
@@ -1,53 +1,68 @@
 # 2024-04-12
 
-共 361 条
+共 374 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Apr 12 2024 22:00:59 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Apr 12 2024 23:00:46 GMT+0800 (China Standard Time) -->
+1. [美媒：伊朗或数小时内袭击以领土](https://so.toutiao.com/search?keyword=美媒：伊朗或数小时内袭击以领土)
 1. [中国资本市场迎来第三个“国九条”](https://so.toutiao.com/search?keyword=中国资本市场迎来第三个“国九条”)
-1. [居民换表后重庆燃气利润暴增824%](https://so.toutiao.com/search?keyword=居民换表后重庆燃气利润暴增824%)
 1. [一季度我国进出口同比增长5％](https://so.toutiao.com/search?keyword=一季度我国进出口同比增长5％)
 1. [警方通报网红杨立新被害：嫌犯被刑拘](https://so.toutiao.com/search?keyword=警方通报网红杨立新被害：嫌犯被刑拘)
+1. [居民换表后重庆燃气利润暴增824%](https://so.toutiao.com/search?keyword=居民换表后重庆燃气利润暴增824%)
+1. [华为新款MateBook X Pro上手体验](https://so.toutiao.com/search?keyword=华为新款MateBook+X Pro上手体验)
+1. [杨立新好友：遇害前她还在吃堕胎药](https://so.toutiao.com/search?keyword=杨立新好友：遇害前她还在吃堕胎药)
+1. [美国：外星人绑架案新证人出现](https://so.toutiao.com/search?keyword=美国：外星人绑架案新证人出现)
 1. [技校上百学生被强制送厂 官方回应](https://so.toutiao.com/search?keyword=技校上百学生被强制送厂+官方回应)
-1. [特警车违停被交警贴罚单](https://so.toutiao.com/search?keyword=特警车违停被交警贴罚单)
 1. [朋友称杨立新系被徒弟杀害](https://so.toutiao.com/search?keyword=朋友称杨立新系被徒弟杀害)
-1. [美称已联系中国等劝伊朗别打以色列](https://so.toutiao.com/search?keyword=美称已联系中国等劝伊朗别打以色列)
-1. [美国8名劫匪持枪洗劫唐人街珠宝店](https://so.toutiao.com/search?keyword=美国8名劫匪持枪洗劫唐人街珠宝店)
+1. [专家：不能去主动发掘秦始皇帝陵](https://so.toutiao.com/search?keyword=专家：不能去主动发掘秦始皇帝陵)
 1. [泽连斯基：乌克兰可能遭遇军事失败](https://so.toutiao.com/search?keyword=泽连斯基：乌克兰可能遭遇军事失败)
-1. [监拍：男子电梯殴打女子被保安暴揍](https://so.toutiao.com/search?keyword=监拍：男子电梯殴打女子被保安暴揍)
-1. [洪秀柱谈马英九大陆行](https://so.toutiao.com/search?keyword=洪秀柱谈马英九大陆行)
 1. [“滴滴代打”可5折用车？官方辟谣](https://so.toutiao.com/search?keyword=“滴滴代打”可5折用车？官方辟谣)
-1. [电动车突然切线 大货车急到飙烟](https://so.toutiao.com/search?keyword=电动车突然切线+大货车急到飙烟)
-1. [伊朗媒体：要把特拉维夫夷为平地](https://so.toutiao.com/search?keyword=伊朗媒体：要把特拉维夫夷为平地)
-1. [四川死亡野生大熊猫为成年雌性](https://so.toutiao.com/search?keyword=四川死亡野生大熊猫为成年雌性)
-1. [洪秀柱：7月将率领近200名台青访陆](https://so.toutiao.com/search?keyword=洪秀柱：7月将率领近200名台青访陆)
-1. [孕妇忘记已怀孕9月习惯性翻了个身](https://so.toutiao.com/search?keyword=孕妇忘记已怀孕9月习惯性翻了个身)
-1. [《承欢记》全员独宠杨紫](https://so.toutiao.com/search?keyword=《承欢记》全员独宠杨紫)
-1. [官方回应街道办副主任被举报出轨](https://so.toutiao.com/search?keyword=官方回应街道办副主任被举报出轨)
-1. [“秦朗丢作业”系摆拍 博主被处罚](https://so.toutiao.com/search?keyword=“秦朗丢作业”系摆拍+博主被处罚)
-1. [“房闹”又来了](https://so.toutiao.com/search?keyword=“房闹”又来了)
-1. [岸田文雄声称今日乌克兰明日东亚](https://so.toutiao.com/search?keyword=岸田文雄声称今日乌克兰明日东亚)
-1. [网红猫一杯就编造捡作业事件道歉](https://so.toutiao.com/search?keyword=网红猫一杯就编造捡作业事件道歉)
-1. [女子母亲去世 舅舅吹唢呐送别](https://so.toutiao.com/search?keyword=女子母亲去世+舅舅吹唢呐送别)
-1. [相恋10年丈夫割一半肝给妻子](https://so.toutiao.com/search?keyword=相恋10年丈夫割一半肝给妻子)
+1. [美称已联系中国等劝伊朗别打以色列](https://so.toutiao.com/search?keyword=美称已联系中国等劝伊朗别打以色列)
+1. [中信证券被证监会立案](https://so.toutiao.com/search?keyword=中信证券被证监会立案)
 1. [专家揭秘黄金飙涨奥秘](https://so.toutiao.com/search?keyword=专家揭秘黄金飙涨奥秘)
+1. [伊朗媒体：要把特拉维夫夷为平地](https://so.toutiao.com/search?keyword=伊朗媒体：要把特拉维夫夷为平地)
+1. [电动车突然切线 大货车急到飙烟](https://so.toutiao.com/search?keyword=电动车突然切线+大货车急到飙烟)
+1. [猫一杯和“秦朗舅舅们”做错了什么](https://so.toutiao.com/search?keyword=猫一杯和“秦朗舅舅们”做错了什么)
+1. [监拍：男子电梯殴打女子被保安暴揍](https://so.toutiao.com/search?keyword=监拍：男子电梯殴打女子被保安暴揍)
+1. [中使馆：菲方屡次背信弃义出尔反尔](https://so.toutiao.com/search?keyword=中使馆：菲方屡次背信弃义出尔反尔)
+1. [“秦朗丢作业”系摆拍 博主被处罚](https://so.toutiao.com/search?keyword=“秦朗丢作业”系摆拍+博主被处罚)
+1. [“小孩姐”“小孩哥”都跳英歌舞了](https://so.toutiao.com/search?keyword=“小孩姐”“小孩哥”都跳英歌舞了)
+1. [岸田：今日的乌克兰或就是明日的东亚](https://so.toutiao.com/search?keyword=岸田：今日的乌克兰或就是明日的东亚)
+1. [网红猫一杯就编造捡作业事件道歉](https://so.toutiao.com/search?keyword=网红猫一杯就编造捡作业事件道歉)
+1. [被中方制裁的2家美军火公司啥来头](https://so.toutiao.com/search?keyword=被中方制裁的2家美军火公司啥来头)
+1. [特警车违停被交警贴罚单](https://so.toutiao.com/search?keyword=特警车违停被交警贴罚单)
+1. [律师解读猫一杯摆拍事件](https://so.toutiao.com/search?keyword=律师解读猫一杯摆拍事件)
+1. [女子母亲去世 舅舅吹唢呐送别](https://so.toutiao.com/search?keyword=女子母亲去世+舅舅吹唢呐送别)
+1. [洪秀柱：7月将率领近200名台青访陆](https://so.toutiao.com/search?keyword=洪秀柱：7月将率领近200名台青访陆)
+1. [雷军展示小米工厂天台](https://so.toutiao.com/search?keyword=雷军展示小米工厂天台)
+1. [第三个“国九条”会开启A股牛市吗](https://so.toutiao.com/search?keyword=第三个“国九条”会开启A股牛市吗)
+1. [五菱高管：谁都想成为雷军](https://so.toutiao.com/search?keyword=五菱高管：谁都想成为雷军)
+1. [四川死亡野生大熊猫为成年雌性](https://so.toutiao.com/search?keyword=四川死亡野生大熊猫为成年雌性)
+1. [“房闹”又来了](https://so.toutiao.com/search?keyword=“房闹”又来了)
 1. [越南女首富死刑背后的“烈火熔炉”](https://so.toutiao.com/search?keyword=越南女首富死刑背后的“烈火熔炉”)
 1. [男子被狗抓伤没打疫苗发病3天离世](https://so.toutiao.com/search?keyword=男子被狗抓伤没打疫苗发病3天离世)
-1. [被中方制裁的2家美军火公司啥来头](https://so.toutiao.com/search?keyword=被中方制裁的2家美军火公司啥来头)
-1. [猫一杯和“秦朗舅舅们”做错了什么](https://so.toutiao.com/search?keyword=猫一杯和“秦朗舅舅们”做错了什么)
-1. [重庆燃气：未发现已复核气表有失准](https://so.toutiao.com/search?keyword=重庆燃气：未发现已复核气表有失准)
-1. [伊朗对联合国开不惩罚以色列条件](https://so.toutiao.com/search?keyword=伊朗对联合国开不惩罚以色列条件)
-1. [雷军展示小米工厂天台](https://so.toutiao.com/search?keyword=雷军展示小米工厂天台)
+1. [日本向菲追加提供海警船 中方回应](https://so.toutiao.com/search?keyword=日本向菲追加提供海警船+中方回应)
+1. [2024款宝骏悦也售8.08万起](https://so.toutiao.com/search?keyword=2024款宝骏悦也售8.08万起)
+1. [洪秀柱谈马英九大陆行](https://so.toutiao.com/search?keyword=洪秀柱谈马英九大陆行)
 1. [男子被开除2天又返聘 工资低一万多](https://so.toutiao.com/search?keyword=男子被开除2天又返聘+工资低一万多)
+1. [张雪峰：模拟考试成绩波动不要焦虑](https://so.toutiao.com/search?keyword=张雪峰：模拟考试成绩波动不要焦虑)
+1. [伊朗对联合国开不惩罚以色列条件](https://so.toutiao.com/search?keyword=伊朗对联合国开不惩罚以色列条件)
+1. [演员关凌因辅导孩子作业进医院](https://so.toutiao.com/search?keyword=演员关凌因辅导孩子作业进医院)
+1. [重庆燃气：未发现已复核气表有失准](https://so.toutiao.com/search?keyword=重庆燃气：未发现已复核气表有失准)
+1. [《承欢记》全员独宠杨紫](https://so.toutiao.com/search?keyword=《承欢记》全员独宠杨紫)
+1. [首饰金价直逼740元每克](https://so.toutiao.com/search?keyword=首饰金价直逼740元每克)
+1. [保安队长性侵女队员背后的临时工之困](https://so.toutiao.com/search?keyword=保安队长性侵女队员背后的临时工之困)
+1. [五一调休放5天](https://so.toutiao.com/search?keyword=五一调休放5天)
+1. [解放军将迎头痛击“台独”分裂行径](https://so.toutiao.com/search?keyword=解放军将迎头痛击“台独”分裂行径)
+1. [美国8名劫匪持枪洗劫唐人街珠宝店](https://so.toutiao.com/search?keyword=美国8名劫匪持枪洗劫唐人街珠宝店)
+1. [孕妇忘记已怀孕9月习惯性翻了个身](https://so.toutiao.com/search?keyword=孕妇忘记已怀孕9月习惯性翻了个身)
+1. [官方回应街道办副主任被举报出轨](https://so.toutiao.com/search?keyword=官方回应街道办副主任被举报出轨)
+1. [岸田文雄声称今日乌克兰明日东亚](https://so.toutiao.com/search?keyword=岸田文雄声称今日乌克兰明日东亚)
+1. [相恋10年丈夫割一半肝给妻子](https://so.toutiao.com/search?keyword=相恋10年丈夫割一半肝给妻子)
 1. [粉丝表白许凯遭杨紫拆台](https://so.toutiao.com/search?keyword=粉丝表白许凯遭杨紫拆台)
 1. [车辆右后轮轮眉脱落随风摇摆像条蛇](https://so.toutiao.com/search?keyword=车辆右后轮轮眉脱落随风摇摆像条蛇)
-1. [保安队长性侵女队员背后的临时工之困](https://so.toutiao.com/search?keyword=保安队长性侵女队员背后的临时工之困)
-1. [第三个“国九条”会开启A股牛市吗](https://so.toutiao.com/search?keyword=第三个“国九条”会开启A股牛市吗)
-1. [专家：不能去主动发掘秦始皇帝陵](https://so.toutiao.com/search?keyword=专家：不能去主动发掘秦始皇帝陵)
 1. [以色列袭击约旦河西岸造成2人死亡](https://so.toutiao.com/search?keyword=以色列袭击约旦河西岸造成2人死亡)
 1. [因司机没有抢红灯 女子骂了一路](https://so.toutiao.com/search?keyword=因司机没有抢红灯+女子骂了一路)
-1. [解放军将迎头痛击“台独”分裂行径](https://so.toutiao.com/search?keyword=解放军将迎头痛击“台独”分裂行径)
-1. [演员关凌因辅导孩子作业进医院](https://so.toutiao.com/search?keyword=演员关凌因辅导孩子作业进医院)
 1. [杨紫扫楼怼脸生图](https://so.toutiao.com/search?keyword=杨紫扫楼怼脸生图)
 1. [淄博炒锅饼小哥爆火体重瘦到112斤](https://so.toutiao.com/search?keyword=淄博炒锅饼小哥爆火体重瘦到112斤)
 1. [韩国执政党国会选举惨败后有何影响](https://so.toutiao.com/search?keyword=韩国执政党国会选举惨败后有何影响)
@@ -55,7 +70,6 @@
 1. [故意杀人犯王俊帅被执行死刑](https://so.toutiao.com/search?keyword=故意杀人犯王俊帅被执行死刑)
 1. [英歌舞小女孩大方接受采访](https://so.toutiao.com/search?keyword=英歌舞小女孩大方接受采访)
 1. [春天里的民族文化“盛宴”](https://so.toutiao.com/search?keyword=春天里的民族文化“盛宴”)
-1. [首饰金价直逼740元每克](https://so.toutiao.com/search?keyword=首饰金价直逼740元每克)
 1. [试驾宝骏悦也Plus](https://so.toutiao.com/search?keyword=试驾宝骏悦也Plus)
 1. [保安队长涉嫌多次性侵66岁女队员](https://so.toutiao.com/search?keyword=保安队长涉嫌多次性侵66岁女队员)
 1. [菲律宾总统车队在白宫外遭抗议](https://so.toutiao.com/search?keyword=菲律宾总统车队在白宫外遭抗议)
@@ -115,7 +129,6 @@
 1. [普京称打击乌能源设施是被迫回应](https://so.toutiao.com/search?keyword=普京称打击乌能源设施是被迫回应)
 1. [多名受害者已成团反击黄子佼](https://so.toutiao.com/search?keyword=多名受害者已成团反击黄子佼)
 1. [外交部：美日拉帮结伙挑战地区和平](https://so.toutiao.com/search?keyword=外交部：美日拉帮结伙挑战地区和平)
-1. [五一调休放5天](https://so.toutiao.com/search?keyword=五一调休放5天)
 1. [钟美美现状：自称过气有钱就挣](https://so.toutiao.com/search?keyword=钟美美现状：自称过气有钱就挣)
 1. [设备更新和以旧换新行动方案](https://so.toutiao.com/search?keyword=设备更新和以旧换新行动方案)
 1. [陕西33岁民警为保护群众牺牲](https://so.toutiao.com/search?keyword=陕西33岁民警为保护群众牺牲)
